Home image size on mobile fixed.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -107,6 +107,10 @@ button {
     display: none;
   }
 
+  .homeImageToSize{
+    max-width: 100%;
+  }
+
   .blackBackgroundAbout{
     width: 100%;
   }
