--- a/frontend/src/sectionsByEoin/Homepage.css
+++ b/frontend/src/sectionsByEoin/Homepage.css
@@ -161,7 +161,7 @@ html {
 }
 
 #greenButton{
-  border-color: #405449;
+  border-color: #718279;
   margin-top: 4rem;
 }
 
